# app/models/admin/schemas.py
@@ -22,3 +22,15 @@ class AdminActionModifySchema(Schema):
 class AdminProfileSchema(Schema):
     name = fields.String(required=True)
     image = fields.String(required=False)
+
+
+class AdminGraphData(Schema):
+    date = fields.Str(required=True)
+    users_with_premium = fields.Int(required=True)
+    users_without_premium = fields.Int(required=True)
+
+
+class AdminStatisticsSchema(Schema):
+    total_users = fields.Int(required=True),
+    premium_users = fields.Int(required=True),
+    graph_data = fields.List(fields.Nested(AdminGraphData()))
